--- a/templates/plugin-check_url_status.cfg.j2
+++ b/templates/plugin-check_url_status.cfg.j2
@@ -3,6 +3,12 @@ define command{
 	command_line	/usr/lib/nagios/plugins/check_url_status --url=http://$HOSTADDRESS$ -Y {{ check_url_proxy_server }} --proxy-user={{ check_url_proxy_user }} --proxy-passwd={{ check_url_proxy_password }}
 }
 
+# usage command   check_url_status_url!url
+define command{
+	command_name	check_url_status_url
+	command_line	/usr/lib/nagios/plugins/check_url_status --url=$ARG1$
+}
+
 #Check URL with auth Custom status to use proxy
 define command{
 	command_name	check_url_auth_status
