fix ansible_managed var

--- a/templates/commands/check_gurobi_machines.cfg.j2
+++ b/templates/commands/check_gurobi_machines.cfg.j2
@@ -1,5 +1,5 @@
 # https://github.com/CoffeeITWorks/nagios_gurobi_machines_plugin
-# {{ ANSIBLE_MANAGED }}
+# {{ ansible_managed }}
 
 define command{
     command_name  check_gurobi_machines
