--- a/templates/commands/check_gurobi_machines.cfg.j2
+++ b/templates/commands/check_gurobi_machines.cfg.j2
@@ -5,3 +5,9 @@ define command{
     command_name  check_gurobi_machines
     command_line  /usr/local/bin/gurobi_machines_plugin --url '$ARG1$' --client_id '$ARG2$' --client_secret '$ARG3$' --outdated_minute $ARG4$  $ARG5$
 }
+
+# use gurobi_machines with proxy
+define command{
+    command_name  check_gurobi_machines_proxy
+    command_line  https_proxy={{ nagios_plugins_https_proxy_env }} /usr/local/bin/gurobi_machines_plugin --url '$ARG1$' --client_id '$ARG2$' --client_secret '$ARG3$' --outdated_minute $ARG4$  $ARG5$
+}
